fix: aboutwrap brands

--- a/src/components/layout/AboutWrap/AboutWrap.module.scss
+++ b/src/components/layout/AboutWrap/AboutWrap.module.scss
@@ -33,7 +33,7 @@
     padding: 20px;
     img{
         width: 100%;
-        height: 200px;
+        height: 130px;
         object-fit: contain;
     }
 
